--- a/settings.yml
+++ b/settings.yml
@@ -1,6 +1,6 @@
 environment-variables:
-  AWS_ACCESS_KEY_ID: v5wIxDEarnzQLz8M7W7e
-  AWS_SECRET_ACCESS_KEY: j1CspYKmYCh8eUIkl8pCXAuBxZhhddfjLUXkw9kL
+  AWS_ACCESS_KEY_ID: 1JADZNqDDMQ5Ii9dkcGE
+  AWS_SECRET_ACCESS_KEY: NXHj69y1fsPF42mMDOU8Xf442qcZi1GM0lRk4X4B
 
 app:
   configuration: debug
@@ -23,7 +23,7 @@ app:
     server-files:
       s3:
         enabled: true
-        endpoint: http://localhost:9000
+        endpoint: http://localhost:9421
       worker-pool:
         worker-count: 3
         queue-size: 100
