--- a/prod-startup-config.yml
+++ b/prod-startup-config.yml
@@ -10,6 +10,9 @@ prelaunch-scripts:
 run-cmd:
   cmd: java
   args:
+    - -server
+    - -Xms1024M
+    - -Xmx2000M
     - -jar
     - server.jar
     - nogui
